	* src/wxterminal/bitmaps/xpm/rotate.xpm:
	* src/wxterminal/bitmaps/xpm/size.xpm:
	Write the hotspot coordinates directly in the cursor files.

	* src/wxterminal/wxt_gui.h (wxtApp::LoadCursor):
	* src/wxterminal/wxt_gui.cpp (wxtApp::LoadCursor):
	Remove hotpost arguments, take hotspot coordinates from the XPM files.
	(wxtApp::OnInit): Update calls to LoadCursor.

2006-06-06  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/setshow.h config/config.*: Move definition of
	BACKWARDS_COMPATIBLE into config.h and the various config.* files rather
	than setshow.h so that it is visible to all the source files.

2006-06-06  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (device_y): Fix computation of
	coordinates.
	(gnuplot_y): Likewise.

2006-06-05  Peter Weilbacher  <paepse@users.sourceforge.net>

	SF Patch [1498727] "Remove duplicate entries in GNU readline history"

	* command.c (rlgets): Remove duplicate entries in GNU readline history.

2006-06-04  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c: Add Id.
	* src/wxterminal/gp_cairo.h: Likewise.
	* src/wxterminal/gp_cairo_term.h: Likewise.
	* src/wxterminal/wxt_gui.cpp: Likewise.
	* src/wxterminal/wxt_gui.h: Likewise.
	* src/wxterminal/wxt_plot.h: Likewise.
	* src/wxterminal/wxt_term.h: Likewise.

2006-06-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (two_edge_intersect) Remove old debugging code.

	* src/graphics.c (edge_intersect plot_filled_curves):  Bugfix.
	Fix clipping of filled curves. When a curve leaves the plot and 
	reenters via a different plot edge, we must add dummy points at the
	intervening plot corners.

	* src/graphics.c (fill_missing_corners): New routine to support
	clipping of filled areas defined by a bounding curve.

2006-06-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/unset.c (reset_command): Abandon the idea of automatic garbage